<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/lesson_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Number" />

            <TextView
                android:id="@+id/textview_lesson_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/lesson_number"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="54dp"
                android:layout_marginRight="0dp"
                tools:text="Lesson Title goes here" />

        </LinearLayout>

        <Button
            android:id="@+id/button_watch_lesson"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_lesson_description"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/button_watch_lesson"
            android:textColor="@color/accent"
            android:textSize="12sp"
            app:strokeColor="@color/accent" />

        <TextView
            android:id="@+id/textview_lesson_description"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_lesson_length"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            tools:text="test test test test test test test test test test" />

        <TextView
            android:id="@+id/textview_lesson_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            tools:text="1 hour 20 min" />

        <EditText
            android:id="@+id/edittext_take_notes"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_below="@+id/textview_take_notes"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:gravity="start"
            android:hint="@string/hint_take_note"
            android:inputType="textMultiLine"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/button_save_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittext_take_notes"
            android:layout_alignEnd="@id/edittext_take_notes"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:text="@string/button_save_notes"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_mark_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_save_notes"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="57dp"
            android:layout_marginBottom="41dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/button_mark_complete"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textview_take_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_watch_lesson"
            android:layout_centerHorizontal="false"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_view_take_note" />

    </RelativeLayout>

</ScrollView>

